04/29/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in XMLDocument that caused null pointer exceptions to be
      thrown when setting the format XML option and the validation option
      in the options at the same time.
    * Added support for adding entity reference nodes to the document.

04/28/2005  Ian Lewis <IanLewis@member.fsf.org>

    * getAllowedElements() in AdapterNode.java now sorts the elements
    * Updated the OptionsPanel interface to remove the redundant saveOptions()
      method
    * Added node types to AdapterNode

04/27/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added Trish to the About Dialog.
    * jsXe no longer thinks the document is not well formed if the DTD/Schema
      cannot be found. It is treated as a validation error.

04/26/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Moved entityDeclared() from AdapterNode to XMLDocument
    * Cleaned up and Documented some methods
    * AdapterNode will now let you add entity nodes if the document is not
      being validated.
    * Updated Copyright info
    * Added an Edit Tag Dialog for adding tags that are defined in a DTD/Schema

04/21/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added a getActiveView() method to the jsXe class so that you can get
      the active view for the program. This will be needed by plugins and
      various other parts of jsXe.
    * Updated some doc and cleaned up the API a bit (made jsXe and Log
      constructors private)
    * Added a getCharAt() method to the ContentManager in the XMLDocument. Will
      use later.

04/18/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated documentation.
    * Removed a number of methods from MiscUtilities that were not needed or
      were jEdit specific.
    * Added a method to the AdapterNode class to allow you to get the document
      that owns it.
    * Added a method to XMLDocument to let you know if it has completion info
      aquired from a DTD/Schema
